clipboard: Dont append data on when read results in  EAGAIN

Otherwise QByteArray::append is called with a negative number which
tries to find a null terminator in buffer.
BUG:512076
FIXED-IN:6.5.4


(cherry picked from commit e42937815cd6e81a062139cfa7fc6a6487c7e125)

Co-authored-by: David Redondo <kde@david-redondo.de>